--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,12 @@
+body {
+  background: black;
+}
+
+/* временный стиль боди для одозначения границ */
 .page {
+  background-color: #f2f2f2;
+  color: #000;
+
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
   /* поэтому выше установлена минимальная ширина страницы */
@@ -6,20 +14,70 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
   /* выше установили ограничения для секции */
+}
+
+.logo_place_header {
+  position: absolute;
+  width: 183px;
+  height: 32px;
+  top: 30px;
+  left: 64px;
+  z-index: 6;
+}
+
+.hader__title {
+  padding-left: 64px;
+  width: 730px;
+  height: 96px;
+  font-size: 102px;
+  z-index: 5;
+}
+
+.header__subtitle {
+  position: absolute;
+  width: 388px;
+  height: 25px;
+  font-size: 18px;
+  bottom: 30px;
+  left: 64px;
+  z-index: 5;
+}
+
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+.header__main-illustration {
+  height: 608px;
+  width: 765px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 3;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
+  position: absolute;
+  top: 64px;
+  right: 0;
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  z-index: 2;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -29,3 +87,50 @@
   margin-right: 0;
   margin-top: 80px;
 }
+
+/* Конец header */
+
+/* начало первой секции */
+.description {
+  display: flex;
+  justify-content: center;
+}
+
+.tow-columns {
+  margin: 100px 0;
+  display: flex;
+  justify-content: space-between;
+  margin: 100px 0;
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__brief {
+  width: 175px;
+  margin-top: 0;
+  padding-top: 0;
+  color: #2f80ed;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.tow-columns__main-text {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.tow-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bolder;
+}
+
+.tow-columns__paragraph {
+  margin-bottom: 30px;
+}
+
+/* Конец первой секции */
+
+/* началовторой секции */
