--- a/styles/style.css
+++ b/styles/style.css
@@ -95,13 +95,12 @@ body {
 .description {
   display: flex;
   justify-content: center;
+  margin: 100px 0;
 }
 
 .tow-columns {
-  margin: 100px 0;
   display: flex;
   justify-content: space-between;
-  margin: 100px 0;
   width: 80%;
   min-width: 784px;
 }
@@ -193,3 +192,40 @@ body {
 /* Конец второй секции */
 
 /* начало 3й секции */
+
+.feynman {
+  height: 890px;
+  margin-top: 100px;
+  text-align: center;
+  position: relative;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: bottom left;
+}
+
+.feynman__title {
+  width: 648px;
+  margin: auto;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+}
+
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin-top: 70px;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  text-decoration: none;
+  color: #2f80ed;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
