--- a/styles/style.css
+++ b/styles/style.css
@@ -80,15 +80,6 @@ body {
   background-color: #2f80ed;
   z-index: 2;
 }
-
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-}
-
 /* Конец header */
 
 /* начало первой секции */
@@ -163,12 +154,14 @@ body {
   justify-content: space-between;
   width: 1100px;
   margin: auto;
+  z-index: 5;
 }
 
 .table__cell {
   width: 250px;
   margin-top: 60px;
   padding: 0;
+  z-index: 5;
 }
 
 .table__heading {
@@ -228,4 +221,44 @@ body {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+}
+
+/* конец 4 блока */
+
+/* начало 5 */
+
+.kaufman {
+  background-color: #1f1f1f;
+  position: relative;
+  overflow: hidden;
+}
+
+/* и элемента с модификатором вида ключ-значение */
+.table__cell_theme_dark {
+  width: 200px;
+  color: white;
+  margin-right: 0;
+  margin-top: 80px;
+}
+
+.section-title_theme_dark {
+  color: white;
+  margin-top: 80px;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 1;
+}
+
+.table_theme_dark {
+  margin-bottom: 80px;
 }
