--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-body {
-  background: black;
-}
-
 /* временный стиль боди для одозначения границ */
 .page {
   background-color: #f2f2f2;
@@ -198,6 +194,7 @@ body {
 }
 
 .feynman__title {
+  padding-top: 100px;
   width: 648px;
   margin: auto;
   line-height: 1.15;
@@ -243,7 +240,7 @@ body {
 
 .section-title_theme_dark {
   color: white;
-  margin-top: 80px;
+  margin-top: 90px;
 }
 
 .section-subtitle_theme_dark {
@@ -260,5 +257,82 @@ body {
 }
 
 .table_theme_dark {
-  margin-bottom: 80px;
+  margin-bottom: 90px;
+}
+
+/* конец 5 блока */
+
+/* начало footer */
+
+.footer {
+  background-color: #1f1f1f;
+  padding: 60px 0 40px 0;
+}
+
+.footer__columns {
+  min-height: 350px;
+  display: flex;
+  margin: 0 auto 0 auto;
+  width: 90%;
+  justify-content: space-between;
+}
+
+.footer__columns_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer__columns_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.footer__columns_social {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
+}
+
+.footer__author {
+  padding: 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+
+.footer__column-heading {
+  margin: 0 0 20px 0;
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  padding-bottom: 16px;
+}
+.footer_column-link {
+  color: white;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer_social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
