--- a/styles/style.css
+++ b/styles/style.css
@@ -89,7 +89,6 @@
   display: flex;
   justify-content: space-between;
   width: 80%;
-  min-width: 784px;
 }
 
 .two-columns__brief {
@@ -106,6 +105,8 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  width: 80%;
+  min-width: 784px;
 }
 
 .tow-columns__span-accent {
