--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 /* временный стиль боди для одозначения границ */
 .page {
-  background-color: #f2f2f2;
   color: #000;
   box-sizing: border-box;
 
@@ -15,6 +14,7 @@
 }
 
 .header {
+  background-color: #f2f2f2;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
@@ -35,17 +35,20 @@
 }
 
 .hader__title {
-  padding-left: 64px;
+  margin: 0;
+  padding: 0 0 0 64px;
   width: 730px;
-  height: 96px;
+  line-height: 96px;
   font-size: 102px;
   z-index: 5;
 }
 
 .header__subtitle {
+  margin: 0;
+  padding: 0;
   position: absolute;
   width: 388px;
-  height: 25px;
+  line-height: 25px;
   font-size: 18px;
   bottom: 30px;
   left: 64px;
@@ -58,6 +61,7 @@
 }
 
 .header__main-illustration {
+  object-fit: cover;
   height: 608px;
   width: 765px;
   position: absolute;
@@ -82,7 +86,7 @@
 .description {
   display: flex;
   justify-content: center;
-  margin: 100px 0;
+  margin: 100px 0 0 0;
 }
 
 .tow-columns {
@@ -93,7 +97,7 @@
 
 .two-columns__brief {
   width: 175px;
-  margin-top: 0;
+  margin: 0;
   padding-top: 0;
   color: #2f80ed;
   line-height: 1.2;
@@ -119,6 +123,10 @@
   margin-bottom: 30px;
 }
 
+.tow-columns__paragraph:last-child {
+  margin-bottom: 0;
+}
+
 /* Конец первой секции */
 
 /* начало второй секции */
@@ -130,7 +138,7 @@
 .section-title {
   width: 60%;
   text-align: center;
-  margin: 0 auto 20px auto;
+  margin: 0 auto 20px;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
@@ -139,7 +147,7 @@
 .section-subtitle {
   width: 60%;
   text-align: center;
-  margin: auto;
+  margin: 0 auto;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -184,8 +192,8 @@
 /* начало 3й секции */
 
 .feynman {
-  height: 890px;
-  margin-top: 100px;
+  background-color: #f2f2f2;
+  min-height: 890px;
   text-align: center;
   position: relative;
   background-image: url(../images/feynman.png);
@@ -197,7 +205,7 @@
 .feynman__title {
   padding-top: 100px;
   width: 648px;
-  margin: auto;
+  margin: 0 auto;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
@@ -207,7 +215,7 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-  margin-top: 70px;
+  margin: 70px 0 0 0;
 }
 
 .feynman__link {
@@ -226,26 +234,31 @@
 /* начало 5 */
 
 .kaufman {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: #1f1f1f;
   position: relative;
   overflow: hidden;
+  padding: 90px 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
+  color: #ffffff;
   margin-right: 0;
   margin-top: 80px;
 }
 
 .section-title_theme_dark {
-  color: white;
-  margin-top: 90px;
+  color: #ffffff;
+  z-index: 3;
 }
 
 .section-subtitle_theme_dark {
-  color: white;
+  color: #ffffff;
+  z-index: 3;
 }
 
 .kaufman__triangle {
@@ -257,29 +270,27 @@
   z-index: 1;
 }
 
-.table_theme_dark {
-  margin-bottom: 90px;
-}
-
 /* конец 5 блока */
 
 /* начало footer */
 
 .footer {
+  box-sizing: border-box;
   background-color: #1f1f1f;
   padding: 60px 0 40px 0;
+  min-height: 350px;
 }
 
 .footer__columns {
-  min-height: 350px;
   display: flex;
-  margin: 0 auto 0 auto;
+  margin: 0 auto 0;
   width: 90%;
   justify-content: space-between;
 }
 
 .footer__columns_copyright {
   flex-basis: 711px;
+  height: 250px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -303,6 +314,7 @@
 }
 
 .footer__author {
+  margin: 0;
   padding: 18px 0;
   line-height: 25px;
   font-size: 18px;
