--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -37,6 +37,11 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  opacity: 1;
+  transition: opacity 0.5s ease-in;
 }
 
+.feynman__link:hover {
+  opacity: 0.5;
+}
 /* конец 4 блока */
