--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -68,6 +68,12 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
+  opacity: 1;
+  transition: opacity 0.5s ease-in;
+}
+
+.footer__column-link:hover {
+  opacity: 0.5;
 }
 
 .footer__social-icon {
