--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
   position: relative;
+  overflow: hidden;
   /* выше установили ограничения для секции */
 }
 
@@ -46,6 +47,12 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
+  opacity: 1;
+  transition: opacity 0.5s ease-in;
+}
+
+.header__link:hover {
+  opacity: 0.5;
 }
 
 .header__main-illustration {
