create block video

--- a/pages/index.css
+++ b/pages/index.css
@@ -14,3 +14,5 @@
 @import url(../blocks/rotation/rotation.css);
 /* Техники обучения */
 @import url(../blocks/techniques/techniques.css);
+/* Инфреймы */
+@import url(../blocks/video/video.css);
