reate all blocks

--- a/blocks/rotation/rotation.css
+++ b/blocks/rotation/rotation.css
@@ -10,3 +10,7 @@
 .header__square-pic {
   animation: rotation 20s linear infinite;
 }
+
+.kaufman__triangle {
+  animation: rotation 20s linear infinite;
+}
