--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -6,7 +6,7 @@
   min-height: 890px;
   text-align: center;
   position: relative;
-  background-image: url(/images/feynman.png);
+  background-image: url(../../images/feynman.png);
   background-repeat: no-repeat;
   background-size: 867px 637px;
   background-position: bottom left;
