--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -29,7 +29,7 @@
 }
 
 .kaufman__triangle {
-  background-image: url(/images/kaufman-triangle.svg);
+  background-image: url(../../images/kaufman-triangle.svg);
   background-size: cover;
   width: 877px;
   height: 877px;
