--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,7 +1,8 @@
 /* начало 3й секции */
 
 .feynman {
-  margin: 100px 0;
+  margin: 0;
+  padding: 100px 0 0 0;
   background-color: #f2f2f2;
   min-height: 890px;
   text-align: center;
@@ -13,7 +14,7 @@
 }
 
 .feynman__title {
-  padding-top: 100px;
+  /* padding-top: 100px; */
   width: 648px;
   margin: 0 auto;
   line-height: 1.15;
