--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -1,7 +1,8 @@
 .oakley {
+  background-color: #f2f2f2;
   display: flex;
   justify-content: center;
-  margin: 160px 0 0 0;
+  padding: 160px 0 0 0;
 }
 
 .two-columns {
