--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,7 @@
 /* нормалайз */
 @import url(../vendor/normalize.css);
 /* Шрифт */
-@import url(../blocks/root/root.css);
+@import url(../blocks/page/page.css);
 /* logo */
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/logo/_place/logo_place_header.css);
@@ -37,18 +37,18 @@
 /* kaufman */
 @import url(../blocks/kaufman/kaufman.css);
 @import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
-@import url(../blocks/section-subtitle/_theme/section-title_theme_dark.css);
-@import url(../blocks/section-subtitle/_theme/table__cell_theme_dark.css);
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
+@import url(../blocks/table/__cell/_theme/table__cell_theme_dark.css);
 @import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
 /* Анимация */
 @import url(../blocks/rotation/rotation.css);
 /* Техники обучения */
 @import url(../blocks/techniques/techniques.css);
-@import url(../blocks/techniques/cards/cards.css);
-@import url(../blocks/techniques/cards/__cell/cards__cell.css);
-@import url(../blocks/techniques/cards/__image/cards__image.css);
-@import url(../blocks/techniques/cards/__title/cards__title.css);
-@import url(../blocks/techniques/cards/__description/cards__description.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__cell/cards__cell.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__description/cards__description.css);
 /* Инфреймы */
 @import url(../blocks/video/video.css);
 @import url(../blocks/video/__iframes/video__iframes.css);
@@ -73,9 +73,10 @@
 /* footer */
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__columns/footer__columns.css);
-@import url(../blocks/footer/__columns/_content/footer__column_content_copyright.css);
-@import url(../blocks/footer/__columns/_content/footer__column_content_info.css);
-@import url(../blocks/footer/__columns/_content/footer__column_content_social.css);
+@import url(../blocks/footer/__column/footer__column.css);
+@import url(../blocks/footer/__column/_content/footer__column_content_copyright.css);
+@import url(../blocks/footer/__column/_content/footer__column_content_info.css);
+@import url(../blocks/footer/__column/_content/footer__column_content_social.css);
 @import url(../blocks/footer/__author/footer__author.css);
 @import url(../blocks/footer/__column-heading/footer__column-heading\ .css);
 @import url(../blocks/footer/__column-links/footer__column-links.css);
